--- a/Builder/pom.xml
+++ b/Builder/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>Builder</artifactId>
+    <artifactId>builder</artifactId>
 
     <properties>
         <maven.compiler.source>22</maven.compiler.source>
