--- a/Composite/pom.xml
+++ b/Composite/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>Composite</artifactId>
+    <artifactId>composite</artifactId>
 
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
