--- a/Proxy/pom.xml
+++ b/Proxy/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>Proxy</artifactId>
+    <artifactId>proxy</artifactId>
 
     <properties>
         <maven.compiler.source>22</maven.compiler.source>
