--- a/Singleton/pom.xml
+++ b/Singleton/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>Singleton</artifactId>
+    <artifactId>singleton</artifactId>
 
     <properties>
         <maven.compiler.source>22</maven.compiler.source>
