--- a/Strategy/pom.xml
+++ b/Strategy/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>Strategy</artifactId>
+    <artifactId>strategy</artifactId>
 
     <properties>
         <maven.compiler.source>22</maven.compiler.source>
