--- a/chain-of-responsibility/pom.xml
+++ b/chain-of-responsibility/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>MVVM</artifactId>
+    <artifactId>chain-of-responsibility</artifactId>
 
     <properties>
         <maven.compiler.source>22</maven.compiler.source>
