--- a/Adapter/pom.xml
+++ b/Adapter/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>adapter</artifactId>
+    <artifactId>adapter-pattern</artifactId>
 
     <properties>
         <maven.compiler.source>22</maven.compiler.source>
