--- a/Facade/pom.xml
+++ b/Facade/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>facade</artifactId>
+    <artifactId>facade-pattern</artifactId>
 
     <properties>
         <maven.compiler.source>22</maven.compiler.source>
