--- a/Factory/pom.xml
+++ b/Factory/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>factory</artifactId>
+    <artifactId>factory-pattern</artifactId>
 
     <properties>
         <maven.compiler.source>22</maven.compiler.source>
