--- a/Memento/pom.xml
+++ b/Memento/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>memento</artifactId>
+    <artifactId>memento-pattern</artifactId>
 
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
