--- a/Prototype/pom.xml
+++ b/Prototype/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>prototype</artifactId>
+    <artifactId>prototype-pattern</artifactId>
 
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
