--- a/State/pom.xml
+++ b/State/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>state</artifactId>
+    <artifactId>state-pattern</artifactId>
 
     <properties>
         <maven.compiler.source>22</maven.compiler.source>
