--- a/visitor/pom.xml
+++ b/visitor/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>visitor-pattern</artifactId>
+    <artifactId>visitor</artifactId>
 
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
