DONE: 1) Iniziato 2) Aggiunta jakarta.persistence in tutto il progetto
TODO:
1) Completare DAO (https://www.baeldung.com/java-dao-pattern)
2) DTO (https://www.baeldung.com/java-dto-pattern)

--- a/pom.xml
+++ b/pom.xml
@@ -34,12 +34,22 @@
         <module>visitor</module>
         <module>bridge</module>
         <module>interpreter</module>
+        <module>data-access-object</module>
     </modules>
 
     <properties>
-        <maven.compiler.source>22</maven.compiler.source>
-        <maven.compiler.target>22</maven.compiler.target>
+        <maven.compiler.source>24</maven.compiler.source>
+        <maven.compiler.target>24</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/jakarta.persistence/jakarta.persistence-api -->
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
